changed hier-barchart to hier-bar-chart

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -14,7 +14,7 @@
         <br>
         <button mat-button routerLink="/force-disjoint" >World Network Health</button>
         <br>
-        <button mat-button routerLink="/hier-barchart" >Network Outage Stats</button>
+        <button mat-button routerLink="/hier-bar-chart" >Network Outage Stats</button>
         <br>
         <button mat-button routerLink="/live-health" >Real-Time Network Health</button>
         <br>
